# ccta

./: .gitignore  CMakeLists.txt  main.cpp
ccta++/include/: CommonUtils.h  ImageHandler.h  UNet3dModel.h
ccta++/src/: CMakeLists.txt  CommonUtils.cpp  ImageHandler.cpp  UNet3dModel.cpp
ccta_lib/: CMakeLists.txt
ccta_lib/include/: UNet3dModel.h
ccta_lib/src/: UNet3dModel.cpp
